// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input/> should render Input 1`] = `
<div>
  <input
    class="cuke-input"
    placeholder=""
    type="text"
    value=""
  />
  <input
    class="cuke-input"
    placeholder="请输入"
    type="password"
    value=""
  />
  <input
    class="cuke-input"
    placeholder="请输入"
    type="number"
    value=""
  />
  <input
    class="cuke-input"
    placeholder=""
    readonly=""
    type="text"
    value="我是只读"
  />
  <input
    class="cuke-input cuke-input-disabled"
    disabled=""
    placeholder="禁用"
    type="text"
    value=""
  />
</div>
`;

exports[`<Input/> should render addon with input 1`] = `
<div>
  <span
    class="cuke-input-group cuke-input-group-addon-before"
  >
    <span
      class="cuke-input-group-addon"
    >
      www
    </span>
    <input
      class="cuke-input"
      placeholder="请输入"
      type="text"
      value=""
    />
  </span>
  <span
    class="cuke-input-group cuke-input-group-addon-after"
  >
    <input
      class="cuke-input"
      placeholder="填写网址"
      type="text"
      value=""
    />
    <span
      class="cuke-input-group-addon"
    >
      .com
    </span>
  </span>
  <span
    class="cuke-input-group cuke-input-group-addon-before cuke-input-group-addon-after cuke-input-group-addon-all"
  >
    <span
      class="cuke-input-group-addon"
    >
      https://
    </span>
    <input
      class="cuke-input"
      placeholder="www.lijinke"
      type="text"
      value=""
    />
    <span
      class="cuke-input-group-addon"
    >
      .cn
    </span>
  </span>
</div>
`;

exports[`<Input/> should render custom size 1`] = `
<div>
  <input
    class="cuke-input cuke-input-small"
    placeholder="small"
    type="text"
    value=""
  />
  <input
    class="cuke-input"
    placeholder="default"
    type="text"
    value=""
  />
  <input
    class="cuke-input cuke-input-large"
    placeholder="large"
    type="text"
    value=""
  />
</div>
`;

exports[`<Input/> should render input password 1`] = `
<div
  class="cuke-input-wrapper cuke-input-has-suffix"
>
  <input
    class="cuke-input cuke-input-password"
    placeholder="请输入"
    type="password"
    value="333"
  />
  <span
    class="cuke-input-suffix"
  >
    <div
      class="cuke-input-password-suffix"
    >
      <svg
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
      </svg>
    </div>
  </span>
</div>
`;

exports[`<Input/> should render prefix and suffix with input 1`] = `
<div>
  <div
    class="cuke-input-wrapper cuke-input-has-prefix"
  >
    <span
      class="cuke-input-prefix"
    >
      <svg
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
        />
        <polyline
          points="22 4 12 14.01 9 11.01"
        />
      </svg>
    </span>
    <input
      class="cuke-input"
      placeholder="请输入"
      type="text"
      value=""
    />
  </div>
  <div
    class="cuke-input-wrapper cuke-input-has-suffix"
  >
    <input
      class="cuke-input"
      placeholder="请输入"
      style="margin:10px 0"
      type="text"
      value=""
    />
    <span
      class="cuke-input-suffix"
    >
      <svg
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
        />
        <polyline
          points="22 4 12 14.01 9 11.01"
        />
      </svg>
    </span>
  </div>
  <div
    class="cuke-input-wrapper cuke-input-has-prefix cuke-input-has-suffix"
  >
    <span
      class="cuke-input-prefix"
    >
      <svg
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
        />
        <polyline
          points="22 4 12 14.01 9 11.01"
        />
      </svg>
    </span>
    <input
      class="cuke-input"
      placeholder="请输入"
      type="text"
      value=""
    />
    <span
      class="cuke-input-suffix"
    >
      <svg
        fill="none"
        height="1em"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
        />
        <polyline
          points="22 4 12 14.01 9 11.01"
        />
      </svg>
    </span>
  </div>
</div>
`;
